--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "description": "Small UI toolkit with useful themed react-components",
   "scripts": {
-    "dev": "webpack serve -c webpack.config.js",
     "build": "webpack -c webpack.prod.js",
+    "build:dev": "webpack -c webpack.config.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -44,7 +44,5 @@
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1"
-  }
+  "sideEffects": false
 }
