--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "description": "Small UI toolkit with useful themed react-components",
   "scripts": {
-    "build": "webpack -c webpack.prod.js",
+    "build": "tsc",
     "build:dev": "webpack -c webpack.config.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -28,9 +28,6 @@
     "babel-loader": "^8.2.2",
     "core-js": "^3.8.2",
     "html-webpack-plugin": "^4.5.1",
-    "react": "^17.0.1",
-    "react-atellier": "^0.1.13",
-    "react-dom": "^17.0.1",
     "storybook-addon-styled-component-theme": "^1.3.0",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.14",
@@ -44,5 +41,8 @@
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
+  }
 }
