--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "tsc",
     "build:dev": "webpack -c webpack.config.js",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -s ./static -p 6006",
+    "build-storybook": "build-storybook -s ./static"
   },
   "author": "",
   "license": "ISC",
@@ -18,16 +18,19 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
-    "@storybook/addon-actions": "^6.1.11",
-    "@storybook/addon-essentials": "^6.1.11",
-    "@storybook/addon-links": "^6.1.11",
-    "@storybook/react": "^6.1.11",
+    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-links": "^6.1.14",
+    "@storybook/react": "^6.1.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.7",
     "babel-loader": "^8.2.2",
     "core-js": "^3.8.2",
+    "eslint": "^7.17.0",
     "html-webpack-plugin": "^4.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "storybook-addon-styled-component-theme": "^1.3.0",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.14",
@@ -41,8 +44,8 @@
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1"
   },
-  "sideEffects": false,
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "feather-icons": "^4.28.0",
+    "remixicon": "^2.5.0"
   }
 }
