--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,18 @@
 {
   "compilerOptions": {
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "target": "ES5",
     "jsx": "react",
     "declarationDir": "build",
     "esModuleInterop": true,
     "declaration": true,
     "outDir": "./build",
+    "strict": true,
     "module": "CommonJS"
   },
-  "exclude": [ "node_modules", "./src/stories", "build"]
+  "exclude": [ "node_modules/react", "./src/stories", "build"]
 }
