--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-kit",
   "version": "1.0.0",
-  "types": "index.d.ts",
-  "main": "index.js",
+  "types": "build/index.d.ts",
+  "main": "build/index.js",
   "description": "Small UI toolkit with useful themed react-components",
   "scripts": {
+    "prepublish": "tsc",
     "build": "tsc",
     "build:dev": "webpack -c webpack.config.js",
     "storybook": "start-storybook -s ./static -p 6006",
