--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "storybook": "start-storybook -s ./static -p 6006",
     "build-storybook": "build-storybook -s ./static"
   },
-  "author": "",
+  "author": "dmitriiqq",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -26,10 +26,18 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-loader": "^8.2.2",
     "core-js": "^3.8.2",
-    "eslint": "^7.17.0",
+    "eslint": "^7.20.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^4.5.1",
+    "prettier": "2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "storybook-addon-styled-component-theme": "^1.3.0",
