--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "target": "ES5",
     "jsx": "react",
     "declarationDir": "build",
@@ -14,5 +10,5 @@
     "strict": true,
     "module": "CommonJS"
   },
-  "exclude": [ "node_modules/react", "./src/stories", "build" ]
+  "exclude": ["node_modules/react", "./src/stories", "build"]
 }
