--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,5 +26,5 @@
       "version": "detect"
     }
   },
-  "ignorePatterns": ["build", "node_modules"]
+  "ignorePatterns": ["build", "node_modules", "*.svg"]
 }
