--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "prepublish": "tsc",
     "build": "tsc",
+    "lint": "eslint --ext .js,.jsx src/**/*",
     "storybook": "start-storybook -s ./static -p 6006",
     "build-storybook": "build-storybook -s ./static"
   },
