FUCKING NPM AND STORYBOOK FINALLY FIXED

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "declaration": true,
     "outDir": "./build",
     "strict": true,
-    "module": "CommonJS"
+    "module": "CommonJS",
   },
   "exclude": ["node_modules/react", "./src/stories", "build"]
 }
